Simplify the non-String PubSub test